--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/ui": "^2.10.0",
-    "nuxt": "^3.8.1",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "seed": "node seed.mjs"
+    },
+    "devDependencies": {
+        "@faker-js/faker": "^8.3.1",
+        "@nuxt/devtools": "latest",
+        "@nuxt/ui": "^2.10.0",
+        "@nuxtjs/supabase": "^1.1.4",
+        "nuxt": "^3.8.1",
+        "vue": "^3.3.8",
+        "vue-router": "^4.2.5",
+        "zod": "^3.22.4"
+    }
 }
