--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@nuxt/devtools": "latest",
         "@nuxt/ui": "^2.10.0",
         "@nuxtjs/supabase": "^1.1.4",
+        "date-fns": "^2.30.0",
         "nuxt": "^3.8.1",
         "vue": "^3.3.8",
         "vue-router": "^4.2.5",
